fix: Update CI/CD workflows for Windows release (v1.0.3)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
             --hidden-import "xlwings" `
             --hidden-import "openpyxl" `
             --hidden-import "xlsxwriter" `
+            --hidden-import "requests" `
             --collect-all "Pillow" `
             --add-data "assets;assets" `
             --add-data "usage_guide.html;." `
@@ -74,6 +75,7 @@ jobs:
             --hidden-import "xlwings" \
             --hidden-import "openpyxl" \
             --hidden-import "xlsxwriter" \
+            --hidden-import "requests" \
             --hidden-import "PIL" \
             --hidden-import "PIL.Image" \
             --hidden-import "PIL.ImageTk" \
