--- a/.github/workflows/release-win.yml
+++ b/.github/workflows/release-win.yml
@@ -28,14 +28,14 @@ jobs:
 
       - name: Build (PyInstaller onedir)
         run: |
-          pyinstaller -y app.spec --clean
+          pyinstaller -y ExcelMatcher_v1.0.0.spec --clean
 
       - name: Pack Release Zip
         shell: pwsh
         run: |
           New-Item -ItemType Directory -Force -Path release | Out-Null
           $tag = "${{ github.ref_name }}"
-          $zip = "release/ExcelMatcherUniversal_win_${{tag}}.zip"
+          $zip = "release/ExcelMatcherUniversal_win_$tag.zip"
           if (Test-Path $zip) { Remove-Item $zip -Force }
           Compress-Archive -Path "dist/ExcelMatcherUniversal/*" -DestinationPath $zip
         id: pack
