--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,15 +31,32 @@ jobs:
       - name: Build Windows EXE
         run: |
           pyinstaller --noconfirm --onedir --windowed `
-            --name "ExcelMatcher" `
+            --name "ExcelMatcher_v1.0.0" `
+            --add-data "seller_assets;seller_assets" `
+            --add-data "assets;assets" `
+            --add-data "presets.json;." `
+            --add-data "replacements.json;." `
             --hidden-import "pandas" `
             --hidden-import "xlwings" `
             --hidden-import "openpyxl" `
             --hidden-import "xlsxwriter" `
             --hidden-import "requests" `
+            --hidden-import "PIL" `
+            --hidden-import "PIL.Image" `
+            --hidden-import "PIL.ImageTk" `
             --collect-all "Pillow" `
-            --add-data "assets;assets" `
-            --add-data "usage_guide.html;." `
+            --exclude-module "PyQt5" `
+            --exclude-module "PyQt6" `
+            --exclude-module "qtpy" `
+            --exclude-module "QtPy" `
+            --exclude-module "jupyter" `
+            --exclude-module "notebook" `
+            --exclude-module "scipy" `
+            --exclude-module "matplotlib" `
+            --exclude-module "IPython" `
+            --exclude-module "sympy" `
+            --exclude-module "astropy" `
+            --icon "assets\app.ico" `
             main.py
 
       - name: Zip Windows Build
@@ -75,7 +92,7 @@ jobs:
       - name: Build macOS App
         run: |
           pyinstaller --noconfirm --onefile --windowed \
-            --name "ExcelMatcher_v1.0.19" \
+            --name "ExcelMatcher_v1.0.0" \
             --hidden-import "pandas" \
             --hidden-import "xlwings" \
             --hidden-import "openpyxl" \
