--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 name: Build Multi-Platform Executables
-# Trigger: 2026-02-18 23:18
+# Trigger: 2026-02-19 00:05
 
 on:
   push:
@@ -149,10 +149,10 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           files: |
-            dist/ExcelMatcher-Windows.zip
-            dist/EasyMatch-macOS.zip
+            ./artifacts/ExcelMatcher-Windows.zip
+            ./artifacts/EasyMatch-macOS.zip
           body: |
-            ## Easy Match v1.0 Release
+            ## Easy Match v1.1.3 Release
 
             ### Windows
             - Download `ExcelMatcher.exe`
