--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ xlwings>=0.30
 rapidfuzz>=3.0
 pyinstaller>=6.0
 tkinterdnd2>=0.3.0
-tkinterdnd2>=0.3.0
 requests>=2.0
 Pillow>=10.0
+python-calamine>=0.6.0
