Fix critical missing imports (sys, numpy) and optimize Vercel hardware configuration

--- a/web_version/vercel.json
+++ b/web_version/vercel.json
@@ -11,5 +11,11 @@
             "src": "/(.*)",
             "dest": "server.py"
         }
-    ]
+    ],
+    "functions": {
+        "server.py": {
+            "maxDuration": 15,
+            "memory": 1024
+        }
+    }
 }
